feat: add tab, rule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 	</div>
 
 	<div id="page-body">
-		<!-- <router-outlet></router-outlet> -->
-		<div>empty</div>
+		<yee-tab [tabs]="tabList">
+			<yee-rule></yee-rule>
+			<!-- <router-outlet></router-outlet> -->
+		</yee-tab>
 	</div>
 </div>
