--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
 
 					<div *ngIf="isOpen" style="margin-left: 16px">
 						<div *ngFor="let document of documentLst; let documentIndex = index" class="menu">
-							<div class="menu-item">
+							<div class="menu-item" (click)="selectDocument(group.id, project.id, document.id)">
 								<div class="menu-header">
 									<i class="menu-icon">&spades;</i>
 									<span class="truncate">
