--- a/src/app/feature/rule/rule.component.html
+++ b/src/app/feature/rule/rule.component.html
@@ -1,1 +1,25 @@
-<yee-table [columns]="tableColumnList" [data]="tableData"></yee-table>
+<yee-table [data]="tableData" [columns]="tableColumnList">
+	<ng-template #header let-columns="columns">
+		<tr>
+			<th *ngFor="let col of columns; let i = index" [style.width.px]="col.width">
+				{{ col.header }}
+				<div class="resize-handle"></div>
+			</th>
+		</tr>
+	</ng-template>
+
+	<ng-template #row let-row="row" let-columns="columns">
+		<tr>
+			<td *ngFor="let col of columns" [style.width.px]="col.width">
+				{{ row[col.field] }}
+			</td>
+		</tr>
+	</ng-template>
+
+	<!-- 空資料範例 -->
+	<ng-template #noData let-columns="columns">
+		<tr>
+			<td [attr.colspan]="columns.length" class="no-data">暫無資料</td>
+		</tr>
+	</ng-template>
+</yee-table>
