--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,5 +1,8 @@
 <div class="yee-sidebar" [class.active]="isOpen">
-	<div class="yee-sidebar-header" style="display: grid; grid-template-columns: max-content 1fr; align-items: center">
+	<div
+		class="yee-sidebar-header"
+		style="display: grid; grid-template-columns: max-content 1fr; align-items: center; border-bottom: 1px solid #ddd"
+	>
 		<div style="padding: 8px">
 			<yee-hamburger></yee-hamburger>
 		</div>
