feat: 調整 tab 元件

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 	</div>
 
 	<div id="page-body">
-		<yee-tab [tabs]="tabList" [(selectedId)]="activeTabId">
+		<yee-tab [tabs]="tabs">
 			<router-outlet></router-outlet>
 		</yee-tab>
 	</div>
