--- a/src/assets/scss/component/_tab.scss
+++ b/src/assets/scss/component/_tab.scss
@@ -12,7 +12,7 @@
 	align-items: center;
 	overflow: hidden;
 	padding: 0 2rem;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid $color-border;
 	background: #fff;
 	height: 100%;
 
@@ -46,7 +46,7 @@
 			gap: 0.5rem;
 			padding: 4px 8px;
 			border-radius: 4px;
-			border: 1px solid #ddd;
+			border: 1px solid $color-border;
 			color: #666;
 			background-color: transparent;
 			transition: background 0.3s ease;
