--- a/src/assets/scss/component/_table.scss
+++ b/src/assets/scss/component/_table.scss
@@ -1,14 +1,49 @@
 .table-container {
-	overflow-x: auto;
+	overflow: auto;
+	position: relative;
+	// border: 1px solid $color-border;
+	// border-radius: 4px;
+	height: 100%;
+	background: $color-bg-lightest;
 }
 
 table {
-	border-collapse: collapse;
 	width: max-content;
+	position: relative;
+	border-collapse: separate;
+	border-spacing: 0;
+
+	thead {
+		position: sticky;
+		top: 0;
+		z-index: 1;
+
+		tr > th {
+			border-bottom: 1px solid $color-border;
+			border-right: 1px solid $color-border;
+			&:last-child {
+				border-right: none;
+			}
+		}
+	}
+
+	tbody {
+		tr > td {
+			border-bottom: 1px solid $color-border;
+
+			border-right: 1px solid $color-border;
+			&:last-child {
+				border-right: none;
+			}
+		}
+
+		tr:last-child > td {
+			border-bottom: none;
+		}
+	}
 
 	th,
 	td {
-		border: 1px solid #ccc;
 		position: relative;
 		padding: 8px;
 		white-space: nowrap;
@@ -16,6 +51,9 @@ table {
 
 	th {
 		background: #f5f5f5;
+	}
+	td {
+		background: #fff;
 	}
 
 	.resize-handle {
