--- a/src/app/layout/hamburger/hamburger.component.html
+++ b/src/app/layout/hamburger/hamburger.component.html
@@ -1,4 +1,4 @@
-<div class="hamburger" [class.open]="isOpen" (click)="toggle()">
+<div class="hamburger" [class.open]="isOpen">
 	<span class="hamburger-indicator"></span>
 	<span class="hamburger-indicator"></span>
 	<span class="hamburger-indicator"></span>
