--- a/src/assets/scss/component/_tab.scss
+++ b/src/assets/scss/component/_tab.scss
@@ -1,22 +1,25 @@
-.yee-tab-wrapper {
-	display: grid;
-	grid-template-rows: max-content 1fr;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
+.tab {
+	&-wrapper {
+		display: grid;
+		grid-template-rows: max-content 1fr;
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+	}
 
-.yee-tab-container {
-	position: relative;
-	display: flex;
-	align-items: center;
-	overflow: hidden;
-	padding: 0 2rem;
-	border-bottom: 1px solid $color-border;
-	background: #fff;
-	height: 100%;
+	&-container {
+		position: relative;
+		display: flex;
+		align-items: center;
+		overflow: hidden;
+		padding: 0 2rem;
+		border-bottom: 1px solid $color-border;
+		background: #fff;
+		height: 48px;
+	}
 
-	.tab-scroll-area {
+	&-scroll-area {
+		height: 100%;
 		display: flex;
 		gap: 0.5rem;
 		padding: 8px;
@@ -27,10 +30,10 @@
 		scrollbar-width: none;
 
 		background-image:
-    /* 左側遮罩，隱藏左邊陰影 */ linear-gradient(to right, white 30%, transparent),
+		/* 左側遮罩，隱藏左邊陰影 */ linear-gradient(to right, white 30%, transparent),
 			/* 右側遮罩，隱藏右邊陰影 */ linear-gradient(to left, white 30%, transparent),
-			/* 左側陰影 */ radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.2), transparent),
-			/* 右側陰影 */ radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.2), transparent);
+			/* 左側陰影 */ radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.3), transparent),
+			/* 右側陰影 */ radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.3), transparent);
 
 		background-position: left center, /* cover1 */ right center, /* cover2 */ left center, /* shadow1 */ right center; /* shadow2 */
 
@@ -38,67 +41,11 @@
 		background-size: 40px 100%, /* cover1 寬 40px */ 40px 100%, /* cover2 */ 14px 100%, /* shadow1 */ 14px 100%; /* shadow2 */
 
 		background-attachment: local, local, scroll, scroll;
-
-		.tab-item {
-			position: relative;
-			display: flex;
-			align-items: center;
-			gap: 0.5rem;
-			padding: 4px 8px;
-			border-radius: 4px;
-			border: 1px solid $color-border;
-			color: #666;
-			background-color: transparent;
-			transition: background 0.3s ease;
-			white-space: nowrap;
-			cursor: pointer;
-
-			&.active {
-				background-color: #e0e0e0;
-				color: #000;
-				font-weight: bold;
-			}
-
-			&.disabled {
-				opacity: 0.5;
-				cursor: not-allowed;
-			}
-
-			&.dragging {
-				cursor: grabbing;
-				opacity: 0.6;
-			}
-
-			.icon {
-				font-size: 18px;
-			}
-
-			.badge {
-				background: crimson;
-				color: white;
-				font-size: 0.7rem;
-				padding: 0.1rem 0.5rem;
-				border-radius: 999px;
-				margin-left: 0.3rem;
-			}
-
-			.close-btn {
-				width: 20px;
-				height: 20px;
-				background: none;
-				border: none;
-				font-size: 14px;
-				cursor: pointer;
-				color: #888;
-
-				&:hover {
-					color: red;
-				}
-			}
-		}
 	}
 
-	.scroll-btn {
+	&-scroll-btn {
+		width: 2rem;
+		height: 100%;
 		position: absolute;
 		top: 50%;
 		transform: translateY(-50%);
@@ -117,11 +64,69 @@
 			right: 0;
 		}
 	}
-}
 
-.yee-tab-content {
-	height: 100%;
-	overflow: auto;
-	background-color: #fff;
-	position: relative;
+	&-item {
+		position: relative;
+		display: flex;
+		align-items: center;
+		gap: 0.5rem;
+		padding: 4px 8px;
+		border-radius: 4px;
+		border: 1px solid $color-border;
+		color: #666;
+		background-color: transparent;
+		transition: background 0.3s ease;
+		white-space: nowrap;
+		cursor: pointer;
+
+		&.active {
+			background-color: #e0e0e0;
+			color: #000;
+			font-weight: bold;
+		}
+
+		&.disabled {
+			opacity: 0.5;
+			cursor: not-allowed;
+		}
+
+		&.dragging {
+			cursor: grabbing;
+			opacity: 0.6;
+		}
+
+		.icon {
+			font-size: 18px;
+		}
+
+		.badge {
+			background: crimson;
+			color: white;
+			font-size: 0.7rem;
+			padding: 0.1rem 0.5rem;
+			border-radius: 999px;
+			margin-left: 0.3rem;
+		}
+
+		.close-btn {
+			width: 20px;
+			height: 20px;
+			background: none;
+			border: none;
+			font-size: 14px;
+			cursor: pointer;
+			color: #888;
+
+			&:hover {
+				color: red;
+			}
+		}
+	}
+
+	&-content {
+		height: 100%;
+		overflow: auto;
+		background-color: #fff;
+		position: relative;
+	}
 }
