--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
 
 					<div *ngIf="isOpen" style="margin-left: 16px">
 						<div *ngFor="let document of documentLst; let documentIndex = index" class="menu">
-							<div class="menu-item" (click)="selectDocument(group.id, project.id, document.id)">
+							<div class="menu-item" (click)="selectDocument(document.id)">
 								<div class="menu-header">
 									<span class="menu-icon">
 										<i>&spades;</i>
