feat: update auth layout

--- a/src/app/feature/auth/login/login.component.html
+++ b/src/app/feature/auth/login/login.component.html
@@ -1,1 +1,5 @@
-<button routerLink="/page">login</button>
+<div>
+	<div style="text-align: center">
+		<button routerLink="/page">login</button>
+	</div>
+</div>
