--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
 	<div style="display: flex; justify-content: space-between">
-		<span>header</span>
+		<span>DRM REVISION</span>
 		<div>
 			<button routerLink="/auth/login">logout</button>
 		</div>
