--- a/src/app/layout/auth-layout/auth-layout.component.html
+++ b/src/app/layout/auth-layout/auth-layout.component.html
@@ -1,9 +1,9 @@
 <div class="auth-layout">
-	<div class="auth-layout__container">
-		<div class="auth-layout__header">
-			<h1>My Application</h1>
+	<div class="auth-layout-container">
+		<div class="auth-layout-header">
+			<h1>DRM REVISION</h1>
 		</div>
-		<div class="auth-layout__content">
+		<div class="auth-layout-content">
 			<ng-content></ng-content>
 		</div>
 	</div>
