--- a/src/assets/scss/_reboot.scss
+++ b/src/assets/scss/_reboot.scss
@@ -18,3 +18,10 @@ body {
 a {
 	text-decoration: none;
 }
+
+button {
+	cursor: pointer;
+	background: none;
+	border: none;
+	user-select: none;
+}
