feat: add component: dropdown

--- a/src/assets/scss/form/_input.scss
+++ b/src/assets/scss/form/_input.scss
@@ -1,6 +1,8 @@
 .input {
+	width: 100%;
 	border: 1px solid $color-border;
 	border-radius: 4px;
 	padding: 4px 8px;
 	font-size: 14px;
+	outline: none;
 }
