--- a/src/app/feature/rule/rule.component.html
+++ b/src/app/feature/rule/rule.component.html
@@ -9,17 +9,36 @@
 		<yee-table [data]="tableData" [columns]="tableColumnList" style="height: 100%">
 			<ng-template #header let-columns="columns">
 				<tr>
-					<th *ngFor="let col of columns; let i = index" [style.width.px]="col.width" yeeResizableColumn [column]="col">
+					<th
+						*ngFor="let col of columns; let i = index"
+						yeeResizableColumn
+						[column]="col"
+						[style.width.px]="col.width"
+						class="truncate"
+					>
 						{{ col.header }}
-						<div class="resize-handle"></div>
 					</th>
 				</tr>
 			</ng-template>
 
 			<ng-template #row let-row="row" let-columns="columns">
 				<tr>
-					<td *ngFor="let col of columns" [style.minWidth.px]="col.width">
-						{{ row[col.field] }}
+					<td *ngFor="let col of columns">
+						<ng-container [ngSwitch]="col.field">
+							<ng-container *ngSwitchCase="'type'">
+								<yee-dropdown
+									[(ngModel)]="row.type"
+									[items]="[
+										{ label: '我是選項一哦', value: RuleType.NEW },
+										{ label: '我是選項二啦', value: RuleType.MODIFIED }
+									]"
+									[placeholder]="'請選擇'"
+								></yee-dropdown>
+							</ng-container>
+							<ng-container *ngSwitchDefault>
+								{{ row[col.field] }}
+							</ng-container>
+						</ng-container>
 					</td>
 				</tr>
 			</ng-template>
