feat: add grid scss

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -1,4 +1,5 @@
 @import './layout/auth';
+@import './layout/grid';
 @import './layout/hamburger';
 @import './layout/header';
 @import './layout/page';
