--- a/src/assets/scss/component/_table.scss
+++ b/src/assets/scss/component/_table.scss
@@ -4,7 +4,7 @@
 	// border: 1px solid $color-border;
 	// border-radius: 4px;
 	height: 100%;
-	background: $color-bg-lightest;
+	background: #fff;
 }
 
 table {
@@ -16,7 +16,7 @@ table {
 	thead {
 		position: sticky;
 		top: 0;
-		z-index: 1;
+		z-index: map-get($zindexs, thead);
 
 		tr > th {
 			position: relative;
@@ -51,6 +51,11 @@ table {
 		padding: 8px;
 		white-space: nowrap;
 		background: #fff;
+
+		&.sticky-cell {
+			position: sticky;
+			z-index: map-get($zindexs, sticky-cell);
+		}
 	}
 
 	.resize-handle {
