--- a/src/assets/scss/form/_dropdown.scss
+++ b/src/assets/scss/form/_dropdown.scss
@@ -36,7 +36,7 @@
 	border-radius: 4px;
 	background: #fff;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	z-index: 1000;
+	z-index: map-get($zindexs, dropdown);
 	display: flex;
 	flex-direction: column;
 }
