--- a/src/app/feature/auth/login/login.component.html
+++ b/src/app/feature/auth/login/login.component.html
@@ -1,5 +1,13 @@
-<div>
-	<div style="text-align: center">
-		<button routerLink="/page">login</button>
+<div class="grid">
+	<div class="col-span-12">
+		<input type="text" placeholder="username" class="input" />
+	</div>
+	<div class="col-span-12">
+		<input type="text" placeholder="password" class="input" />
+	</div>
+	<div class="col-span-12">
+		<div style="text-align: center">
+			<button routerLink="/page">login</button>
+		</div>
 	</div>
 </div>
