--- a/src/assets/scss/component/_table.scss
+++ b/src/assets/scss/component/_table.scss
@@ -31,6 +31,7 @@ table {
 	tbody {
 		tr > td {
 			max-width: 0;
+			align-content: center;
 
 			border-bottom: 1px solid $color-border;
 			border-right: 1px solid $color-border;
