feat: add rule filter

--- a/src/app/feature/rule/rule.component.html
+++ b/src/app/feature/rule/rule.component.html
@@ -2,7 +2,9 @@
 	<details style="border-bottom: 1px solid #ddd">
 		<summary style="padding: 8px; cursor: pointer">Document 001</summary>
 
-		<div style="padding: 8px; border-top: 1px solid #ddd"></div>
+		<div style="padding: 8px; border-top: 1px solid #ddd">
+			<yee-rule-filter />
+		</div>
 	</details>
 
 	<div style="height: 100%; overflow: auto; position: relative">
