--- a/src/assets/scss/layout/_grid.scss
+++ b/src/assets/scss/layout/_grid.scss
@@ -14,9 +14,9 @@
 }
 
 // 動態產生「佔幾欄」class
-// 例如：<div class="col-span-4">... </div>
+// 例如：<div class="col-4">... </div>
 @for $i from 1 through $grid-columns {
-	.col-span-#{$i} {
+	.col-#{$i} {
 		grid-column: span #{$i};
 	}
 }
@@ -36,11 +36,11 @@
 }
 
 // 動態產生各斷點下的「佔幾欄」class
-// 例如：<div class="sm-col-span-6 lg-col-span-3">...
+// 例如：<div class="col-sm-6 col-lg-3">...
 @each $bp, $size in $breakpoints {
 	@if $bp != xs {
 		@for $i from 1 through $grid-columns {
-			.col-span-#{$bp}-#{$i} {
+			.col-#{$bp}-#{$i} {
 				@include respond-to($bp) {
 					grid-column: span #{$i};
 				}
