feat: add table column

--- a/src/app/feature/auth/login/login.component.html
+++ b/src/app/feature/auth/login/login.component.html
@@ -7,7 +7,13 @@
 	</div>
 	<div class="col-12">
 		<div style="text-align: center">
-			<button routerLink="/page">login</button>
+			<button
+				routerLink="/page"
+				class="button"
+				style="color: #fff; background: #519cdb; width: 100%; font-weight: bolder"
+			>
+				LOGIN
+			</button>
 		</div>
 	</div>
 </div>
