--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header">
-	<div style="display: flex; justify-content: space-between">
+	<div style="display: flex; align-items: center; justify-content: space-between">
 		<span>DRM REVISION</span>
 		<div>
-			<button routerLink="/auth/login">logout</button>
+			<button routerLink="/auth/login" class="button">logout</button>
 		</div>
 	</div>
 </div>
