--- a/src/app/feature/rule/rule.component.html
+++ b/src/app/feature/rule/rule.component.html
@@ -16,7 +16,10 @@
 						yeeResizableColumn
 						[column]="col"
 						[style.width.px]="col.width"
+						[style.textAlign]="col.align"
 						class="truncate"
+						[ngClass]="col.thStyleClass"
+						[ngStyle]="col.thStyle"
 					>
 						{{ col.header }}
 					</th>
@@ -25,8 +28,16 @@
 
 			<ng-template #row let-row="row" let-columns="columns">
 				<tr>
-					<td *ngFor="let col of columns">
+					<td
+						*ngFor="let col of columns"
+						[style.textAlign]="col.align"
+						[ngClass]="col.tdStyleClass"
+						[ngStyle]="col.tdStyle"
+					>
 						<ng-container [ngSwitch]="col.field">
+							<ng-container *ngSwitchCase="'action'">
+								<button class="button" style="color: #519cdb">Edit</button>
+							</ng-container>
 							<ng-container *ngSwitchCase="'name'">
 								<input [(ngModel)]="row.name" type="text" class="input" />
 							</ng-container>
